OCaml 5.2 maintenance version
-----------------------------

- #13207: Be sure to reload the register caching the exception handler in
  caml_c_call and caml_c_call_stack_args, as its value may have been changed
  if the OCaml stack is expanded during a callback.
  (Miod Vallat, report by Vesa Karvonen, review by Gabriel Scherer and
   Xavier Leroy)

- #13252: Rework register assignment in the interpreter code on m68k on Linux,
  due to the %a5 register being used by Glibc.
  (Miod Vallat, report by Stéphane Glondu, review by Gabriel Scherer and
   Xavier Leroy)

- #13268: Fix a call to test in configure.ac that was causing errors when
  LDFLAGS contains several words.
  (Stéphane Glondu, review by Miod Vallat)

- #13234, #13267: Open runtime events file in read-write mode on armel
  (armv5) systems due to atomic operations limitations on that
  platform.
  (Stéphane Glondu, review by Miod Vallat and Vincent Laviron)

- #13188: fix races in the FFI code coming from the use of Int_val(...)
  on rooted values inside blocking questions / without the runtime lock.
  (Calling Int_val(...) on non-rooted immediates is fine, but any
   access to rooted values must be done outside blocking sections /
   with the runtime lock.)
  (Etienne Millon, review by Gabriel Scherer, Jan Midtgaard, Olivier Nicole)

- #13318: Fix regression in GC alarms, and fix them for flambda.
  (Guillaume Munch-Maccagnoni, report by Benjamin Monate, review by
   Vincent Laviron and Gabriel Scherer)

- #13140: POWER back-end: fix issue with call to `caml_call_realloc_stack`
  from a DLL
  (Xavier Leroy, review by Miod Vallat)

OCaml 5.2.0 (13 May 2024)
-------------------------

(Changes that can break existing programs are marked with a "*")

### Restored and new backends:

- #12276, #12601: native-code compilation for POWER (64 bits, little-endian)
  (Xavier Leroy, review by KC Sivaramakrishnan, Anil Madhavapeddy,
   and Stephen Dolan)
