@@ -1,6 +1,14 @@
 OCaml 5.2 maintenance version
 -----------------------------
 
+### Internal/compiler-libs changes:
+
+- #12896: Use quoted strings to clarify the C code being generated by the
+  bytecode linker in `-custom` and `-output-*` modes.
+  (David Allsopp and Antonin Décimo, review by Vincent Laviron)
+
+### Bug fixes:
+
 - #13207: Be sure to reload the register caching the exception handler in
   caml_c_call and caml_c_call_stack_args, as its value may have been changed
   if the OCaml stack is expanded during a callback.
